<?xml version="1.0"?>
<package format="3">
  <name>actuator_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for actuator control</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

